# Raven

./: .gitattributes  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  README.md  main.py  pyproject.toml
docker/: Dockerfile  configuration.yaml  docker-compose.yml  start.py
docs/benchmark/: vulnerable_environments.md
docs/tools/: tool_description.md
examples/: __init__.py
src/raven/: __init__.py
src/raven/agents/: __init__.py  agent.py  attack_agent.py  intent_recon_agent.py  output_agent.py  plan_agent.py  recon_agent.py  search_agent.py  supervisor_agent.py
src/raven/graph_rag/: __init__.py  graph_rag.py  query.prompt
src/raven/graph_rag/entity_service/: entity_extractor.py
src/raven/graph_rag/ingestion_service/: document_loader.py  text_chunker.py
src/raven/graph_rag/llm_service/: llm_client.py
src/raven/graph_rag/manager_server/: local_id_generator.py  milvus_client.py  neo4j_client.py
src/raven/graph_rag/test/: Neo4j_test.py  _load_html_test.py  _load_markdown_test.py  graph_rag_test.py  graph_rag_text.txt  llm_client_test.py  load_document_test.py  load_json_test.py  milvus_test.py  task1.py  task1_test.py  test.json  test.txt  (+2 more)
src/raven/prompts/: __init__.py  attack_prompt.py  intent_prompt.py  plan_prompt.py  recon_prompt.py  search_prompt.py
src/raven/tools/: __init__.py  attack_ftp_ssh.py  attack_web.py  recon_app_server.py  recon_dir_enum.py  recon_port_scan.py  search_local.py  search_online.py
src/raven/utils/: __init__.py  kafka_client.py  logger.py  mapping.py  schemas.py
tests/: __init__.py  test_kafka.py
(+6 files in other folders)
